--- a/store.html
+++ b/store.html
@@ -86,8 +86,8 @@
                         <div class="card shadow" style="height: 370px;">
                             <div class="img-fluid">
                                 <a
-                                    href="https://ae01.alicdn.com/kf/Hd5590bd4cf114413b2e03d5afd8ae508t/Bluetooth-Smart-Watch-Men-Women-1-6-Full-Touch-Screen-Fitness-Smartwatch-Heart-Rate-Blood-Pressure.png_.webp">
-                                    <img src="https://ae01.alicdn.com/kf/Hd5590bd4cf114413b2e03d5afd8ae508t/Bluetooth-Smart-Watch-Men-Women-1-6-Full-Touch-Screen-Fitness-Smartwatch-Heart-Rate-Blood-Pressure.png_.webp"
+                                    href="https://media.istockphoto.com/id/1333053202/photo/set-of-smart-watches-with-colorful-straps-on-black-background.jpg?b=1&s=170667a&w=0&k=20&c=LCLxaHBnFLMDlxxr-tlp-g7Zz-DvNVmISjPK-HIDdVg=">
+                                    <img src="https://media.istockphoto.com/id/1333053202/photo/set-of-smart-watches-with-colorful-straps-on-black-background.jpg?b=1&s=170667a&w=0&k=20&c=LCLxaHBnFLMDlxxr-tlp-g7Zz-DvNVmISjPK-HIDdVg="
                                         class="card-img-top " height="200" width="20" alt="...">
                                 </a>
                             </div>
