--- a/store.html
+++ b/store.html
@@ -37,7 +37,7 @@
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
 
 
-                            <a class="nav-link text-white" href="#"> <i class="fa-solid fa-house"></i> Home</a>
+                            <a class="nav-link text-white" href="dashboard.html"> <i class="fa-solid fa-house"></i> Home</a>
                             </li>
                             <div class="dropdown">
                                 <a class="btn  dropdown-toggle text-white" href="#" role="button"
