--- a/dashboard.html
+++ b/dashboard.html
@@ -283,7 +283,7 @@
             width="600" alt="form">
         </div>
         <form class="form-detail" id="myForm" action="#" method="post">
-          <h2>Register Form</h2>
+          <h2>Contact us</h2>
           <h4 class="output"></h4>
           <!-- <div class="form-row">
               <input type="text" name="full-name" id="full-name" class="input-text" placeholder="Your Name" required>
@@ -293,7 +293,7 @@
               pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
           </div>
           <div class="form-row">
-            <input type="password" name="password" id="password" class="input-text" placeholder="Password" required>
+            <input type="text" name="password" id="password" class="input-text" placeholder="comment" required>
           </div>
           <!-- <div class="form-row">
               <input type="password" name="comfirm-password" id="comfirm-password" class="input-text" placeholder="Comfirm Password" required>
